Refactor `SourceFinder` and `LoggerService` for streamlined image scraping, environment logging, and improved maintainability.
- Simplified `SourceFinder` by removing outdated URL validation and static logic.
- Updated image selection to target specific classes (`img.maw-w-full.mx-auto`) for more reliable scraping.
- Enhanced `LoggerService` with dynamic environment detection, log rotation improvements, and detailed log messages.
- Improved error handling and logging across services for better debugging.
- Removed redundant code and unused imports for cleaner implementation.